# dlrm_preproc

./: .gitignore  CLAUDE.md  CMakeLists.txt  Dockerfile  docker-compose.yml  requirements.txt
data/: __init__.py  synthetic.py
model/: __init__.py  dlrm.py
preproc/: __init__.py  export.py  module.py
preproc_runner/: main.cpp
scripts/: build_cpp.sh  run_training.sh
trainer/: train.py
